# gadfly

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml
docs/: conf.py  index.rst
docs/assets/: logo.py
docs/gadfly/: index.rst  install.rst  power_spectra.rst  reference.rst  solar.rst  start.rst  stellar.rst  synth.rst  validation.rst
docs/gadfly/data/: huber2011_sample.ecsv
gadfly/: __init__.py  core.py  cython.pyx  gp.py  interp.py  psd.py  scale.py  sun.py
gadfly/data/: broomhall2009_table2_labeled.ecsv  broomhall_2009_p_modes.ecsv  estimate_alpha.json  hyperparameters.json  parameter_vector.txt
gadfly/tests/: test_core.py  test_psd.py  test_sun.py
licenses/: LICENSE.rst
notebooks/: huber2011.ecsv  normalization_and_units.ipynb  parameter_vector.json  virgo_lc.ipynb
notebooks/paper/: runtime-speed.ipynb  sho.ipynb  soho_virgo.ipynb  validation-evolution.ipynb  variability-scaling.ipynb
