[metadata]
name = gadfly
author = Brett M. Morris
author_email = morrisbrettm@gmail.com
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/bmorris3/gadfly
description = Stellar oscillations and granulation
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numpy
    celerite2
    astropy>=4.3
    cython

[options.extras_require]
all =
    matplotlib
    PyYAML
    scipy
    lightkurve
    tynt
test =
    pytest
    pytest-doctestplus
    pytest-cov
    scipy
docs =
    sphinx
    sphinx-automodapi
    scipy
    lightkurve
    sphinx-book-theme>=0.3.3
    numpydoc

[options.package_data]
gadfly =
    data/*.ecsv
    data/*.json

[tool:pytest]
testpaths = "gadfly" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  gadfly/__init*
  gadfly/conftest.py
  gadfly/*setup_package*
  gadfly/tests/*
  gadfly/*/tests/*
  gadfly/extern/*
  gadfly/version*
  */gadfly/__init*
  */gadfly/conftest.py
  */gadfly/*setup_package*
  */gadfly/tests/*
  */gadfly/*/tests/*
  */gadfly/extern/*
  */gadfly/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
